<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.arman.adivinaelnumero.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/subtitle1al10"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="76dp"/>

    <Button
        android:id="@+id/btnGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="?attr/colorControlHighlight"
        android:gravity="center_vertical"
        android:text="@string/button_guess_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="203dp"/>

    <EditText
        android:id="@+id/txtGuess"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="133dp"/>

    <TextView
        android:id="@+id/lblIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblOutput"
        android:text="@string/tienes_tries"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/lblOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGuess"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/buenaSuerte"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        tools:ignore="HardcodedText"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        app:srcCompat="@drawable/logo1"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/confetti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/lblOutput"
        android:layout_marginTop="13dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/confetti"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblIntentos"
        android:cropToPadding="false"
        android:visibility="invisible"
        app:srcCompat="@drawable/win"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblIntentos"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/sady"
        tools:ignore="ContentDescription"/>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGuess"
        android:layout_alignStart="@+id/btnGuess"
        android:layout_alignTop="@+id/btnGuess"
        android:background="?attr/colorControlHighlight"
        android:text="@string/button_again_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblIntentos"
        android:layout_toEndOf="@+id/btnGuess"
        android:visibility="invisible"
        app:srcCompat="@drawable/errorstop"
        tools:ignore="ContentDescription"
        android:layout_toRightOf="@+id/btnGuess"/>

    <ImageView
        android:id="@+id/sign1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/firstintsign"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/btnGuess"
        android:layout_toEndOf="@+id/btnGuess"
        android:layout_marginTop="7dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/sign2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/secondintsign"
        android:layout_alignTop="@+id/textView7"
        android:layout_toLeftOf="@+id/btnGuess"
        android:layout_toStartOf="@+id/btnGuess"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/confettitop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblOutput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/confetti3"
        tools:ignore="ContentDescription"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3802992379133652/1039504923">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
